# AirtallyRest

./: .env.example  .gitignore  AirTally_REST_API_Documentation.md  CLEAN_MIGRATION_GUIDE.md  Cargo.toml  DEPLOYMENT_README.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  START_HERE.md  UBUNTU_DEPLOYMENT.md  airtally-api.service  backup-database.sh  check_password.rs  cleanup-old-airtally.sh  decode.json  deploy-automated.sh  deploy.sh  fresh-install-falcon.sh  maintenance.sh  migrate-to-falcon.sh  monitor-health.sh  nginx.conf.example  plan_restapi.txt  start_server.bat  update-api.sh
.claude/: settings.local.json
.sqlx/: query-085d2ec5d1bf9109ca57e4e616d5111192b8433b8d0a33e6003cef4a536aae48.json  query-0c5bb03726a95fa584e25f9222996f93df7fea6befcac45bfef42cc636b5b5f1.json  query-115ff67190030cfae8087a0df55c8b1285a36aa47683ab4e47fa60cd7babeb52.json  query-26548cd6edc28e0b84bc45d9a03142da13b05615ed3ced5e2767c533fa839005.json  query-29ab9a349f95512ae49e55d7d0232cb4acd34546d447c8d752f3028e78a3abc3.json  query-2c3f1051045a252c5f671a6971db39a4acdbd71eb7ffaa61e0ea530b64e535b6.json  query-55053769b676c21b62db07148f4321039799c7152534b08b68fab9a603f90b09.json  query-5b72f231390773bf0a27deb9dac507775997b20f7b619a7d852491272a208c8d.json  query-6b0c230d931514d681ed1b37d177cf432069b30e387754a938ec4defad30ad3f.json  query-8b75aa79760f9e2e6b1607fc09710c67d1f04eaedce161ef4c30c64fc40cfae9.json  query-96678746a39faeac2f2079a626ed50a32318930111e4f8fcc7b527945b04b98d.json  query-9916cca0c8ca3bd32a02577e981fc4e2fd8ae115c674596f40d1baa0ee710d53.json  query-a0933da5750669ce4267df536f2193bc3ff5b5c3b14b9ef6fcad7d4b0451e32d.json  query-abb67922773ab06ebc599333e2244e64372a55246b681a0ea216d0be3d8c6dbe.json  query-bd1e2d22f91969c099554d4e0e0855260a3b00b9155bacb1985d0b0e2afd65bc.json  query-be1010bbb9c0efe4a6bb5662d9925390c64eebd1edbf3f1bfa824ecedf32e481.json  (+5 more)
examples/: generate_password.rs
src/: auth_middleware.rs  config.rs  (+16 more)
(+12 files in other folders)
