[package]
name = "airtally-restapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.6"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
regex = "1.11.3"
lazy_static = "1.5"
